prod/release-aware/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-aware
  namespace: monitoring
spec:
  tls:
  - hosts:
    - release-aware.sdpaks.equinor.com
    secretName: release-aware-tls
  rules:
    - host: release-aware.sdpaks.equinor.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: release-aware-api
              servicePort: 80
          - path: /
            backend:
              serviceName: release-aware-web
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-aware-auth
  namespace: monitoring
spec:
  tls:
  - hosts:
    - release-aware.sdpaks.equinor.com
    secretName: release-aware-tls
  rules:
    - host: release-aware.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-sdp
              servicePort: 4180
